2008-03-02  H.J. Lu  <hongjiu.lu@intel.com>

PR ld/5789
	* elflink.c (_bfd_elf_symbol_refs_local_p): Always return true
	for hidden and local symbols.